--- a/templates/WebApp/select_aoi.html
+++ b/templates/WebApp/select_aoi.html
@@ -20,10 +20,10 @@
 
     <script src="{% static 'js/basemaps.js' %}"></script>
     <style>
-    .leaflet-top.leaflet-right{
+        .leaflet-top.leaflet-right {
         {#top:50px;#}
 
-    }
+        }
     </style>
 
 {% endblock %}
@@ -31,7 +31,7 @@
 {% block content %}
     <div class="container-fluid bg-gray-300">
 
-            <div class="row">
+        <div class="row">
             <div class="col-xl-12 col-lg-12">
                 <div class="card mb-4 mt-4 shadow">
                     <!-- Card Header -->
@@ -42,22 +42,49 @@
                     <!-- Card Body -->
                     <div class="card-body">
 
-                            <div id="map_aoi"></div>
-                        <a id="export" class="btn btn-primary text-center" >Download the GEOJSON</a><label class="ml-2">Please draw an area of interest before downloading.</label>
-            </div>
- <div>
+                        <div id="map_aoi"></div>
+                        <a id="export" class="btn btn-primary text-center">Download the GEOJSON</a><label class="ml-2">Please
+                        draw an area of interest before downloading.</label>
+                    </div>
+                    <div>
 
 
                     </div>
 
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mb-4">
+                <div class="card shadow">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">About AOI</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="text-left text-dark">
+                            AOI stands for area of interest. Please drawn any polygon using the map controls.
+                            <hr>
+                            Please click the 'Download the GEOJSON' button to download the drawn polygon as a geojson
+                            file.
+                            <hr>
+                            This page uses Leaflet JS library.
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="col mb-4">
+                <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                        data-bs-target="#aoiModal">
+                    Learn how to modify this page
+                </button>
+            </div>
+        </div>
     </div>
 
 
 
     <link rel="stylesheet" href="{% static '/css/common.css' %}">
     <script src="{% static 'js/select_aoi.js' %}"></script>
+    {% include 'WebApp/select_aoi_about.html' %}
 
 {% endblock %}
