--- a/templates/WebApp/select_aoi.html
+++ b/templates/WebApp/select_aoi.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="card-body">
                         <div class="text-left text-dark">
-                            AOI stands for area of interest. Please drawn any polygon using the map controls.
+                            AOI stands for area of interest. Please draw any polygon using the map controls.
                             <hr>
                             Please click the 'Download the GEOJSON' button to download the drawn polygon as a geojson
                             file.
