new card for map and data

--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -48,7 +48,7 @@
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Team members</h6>
                     </div>
-                    <div class="card-body text-center">
+                    <div class="card-body m-auto w-50">
                         <div class="row row-centered pos">
                             <div class="col-sm-3">
                                 <div><img src="{% static 'images/teammembers/TeamMember1.jpg' %}" alt="img1"
