--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -46,7 +46,7 @@
                             {% for station in stations %}
                                 <option value="{{ station.station_id }}">{{ station.station_name }} </option>
                             {% empty %}
-                                <option>Sorry, no athletes in this list.</option>
+                                <option>Sorry, no data.</option>
                             {% endfor %}
                         </select>
 
