--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -80,8 +80,9 @@
                                         <label class="form-check-label" for="chirps_full">CHIRPS Layer</label>
                                         <a class="fullmap_popover" role="button" href=#"
                                            data-bs-toggle="popover" title="CHIRPS"
-                                           data-bs-trigger="focus" data-bs-content="Info about chirps"><i
-                                                class="fa-solid fa-circle-info info_btn"></i></a>
+                                           data-bs-trigger="focus" data-bs-content="Info about chirps">
+                                            <i class="fa-solid fa-circle-info info_btn"></i>
+                                        </a>
                                     </div>
 
                                     <input id="opacity_chirps_full"
