--- a/WebApp/static/css/full_map.css
+++ b/WebApp/static/css/full_map.css
@@ -14,7 +14,7 @@
 .sidenav a {
     padding: 0px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    /*font-size: 25px;*/
     color: #818181;
     display: block;
     transition: 0.3s;
