--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -126,13 +126,13 @@
                                                     <div class="tab-pane active  p-3 ml-3" id="layers"
                                                          role="tabpanel"
                                                          aria-labelledby="layers-tab"><p>
-                                                        <label class="form-check-label  mt-2 w-75"
+                                                        <label class="form-check-label  w-75"
                                                                for="collection"><input class="form-check-input"
                                                                                        id="collection"
                                                                                        type="checkbox"/>Image
                                                             Collection Layer</label>
 
-                                                        <a role="button" href=#" data-bs-toggle="popover"
+                                                        <a role="button" class="float-right" href=#" data-bs-toggle="popover"
                                                            title="Image Collection Info"
                                                            data-bs-trigger="focus"
                                                            data-bs-content="Use this space to offer a description of the dataset.
@@ -154,12 +154,12 @@
                                                         <p>
 
 
-                                                            <label class="form-check-label mt-2 w-75"
+                                                            <label class="form-check-label w-75"
                                                                    for="asset"><input class="form-check-input"
                                                                                       id="asset"
                                                                                       type="checkbox"/>
                                                                 Public GEE User Asset</label>
-                                                            <a role="button" href=#" data-bs-toggle="popover"
+                                                            <a role="button" class="float-right" href=#" data-bs-toggle="popover"
                                                                data-bs-trigger="focus" title="User Asset Info"
                                                                data-bs-content="Precipitation factor for carbon monitoring estimations.
                                                    For this template we are using a GEE User Asset that is exposed publicly.
@@ -178,10 +178,10 @@
                                                     </div>
                                                     <!-- Tab pane: Basemaps -->
                                                     <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
-                                                    <div class="tab-pane" id="basemaps_gee" role="tabpanel"
+                                                    <div class="tab-pane  h-100 pt-3" id="basemaps_gee" role="tabpanel"
                                                          aria-labelledby="basemaps_gee-tab">
-                                                        <div class="card-body text-center">
-                                                            <div class="row row-centered pos d-block">
+                                                        <div class="h-100 text-center">
+                                                            <div class=" pos d-block">
                                                                 <a id="osm" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/osm.png' %}"
