--- a/templates/WebApp/map_chart.html
+++ b/templates/WebApp/map_chart.html
@@ -71,7 +71,6 @@
                         <thead>
                         <tr>
                         <tr>
-                            <td>Date</td>
                             <td>Prec</td>
                             <td>Temp</td>
                         </tr>
@@ -81,7 +80,6 @@
                             {% for i in obj %}
 
                                 <tr>
-                                    <td>{{ obj.date }}</td>
                                     <td>{{ obj.prec }}</td>
                                     <td>{{ obj.temp }}</td>
                                 </tr>
@@ -221,10 +219,10 @@
                                                     </div>
                                                     <!-- Tab pane: Basemaps -->
                                                     <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
-                                                    <div class="tab-pane" id="basemaps" role="tabpanel"
+                                                            <div class="tab-pane h-100 pt-3" id="basemaps" role="tabpanel"
                                                          aria-labelledby="basemaps-tab">
-                                                        <div class="card-body text-center">
-                                                            <div class="row row-centered pos d-block">
+                                                        <div class="h-100 text-center">
+                                                            <div class=" pos d-block">
                                                                 <a id="osm" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/osm.png' %}"
