--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -75,10 +75,10 @@
                              aria-labelledby="headingOne" data-bs-parent="#full_tab_container">
                             <div class="accordion-body">
                                 <div class="side_panel">
-                                    <div class="d-inline-flex">
+                                    <div class="d-inline-flex w-100">
                                         <input class="form-check-input" id="chirps_full" type="checkbox"/>
-                                        <label class="form-check-label" for="chirps_full">CHIRPS Layer</label>
-                                        <a class="fullmap_popover" role="button" href=#"
+                                        <label class="form-check-label w-75" for="chirps_full">CHIRPS Layer</label>
+                                        <a class="float-right" role="button" href=#"
                                            data-bs-toggle="popover" title="CHIRPS"
                                            data-bs-trigger="focus" data-bs-content="Info about chirps">
                                             <i class="fa-solid fa-circle-info info_btn"></i>
@@ -95,10 +95,10 @@
                                     /><label class="ml-1"
                                                                        id="chirps_full_opacity"></label>
                                     <div id="legend_full_chirps"></div>
-                                    <div class="d-inline-flex"><input class="form-check-input" id="esi_full"
+                                    <div class="d-inline-flex w-100"><input class="form-check-input" id="esi_full"
                                                                       type="checkbox"/>
-                                        <label class="form-check-label" for="esi_full">ESI Layer</label>
-                                        <a class="full_map_popover" role="button" href=#"
+                                        <label class="form-check-label w-75" for="esi_full">ESI Layer</label>
+                                        <a class="float-right" role="button" href=#"
                                            data-bs-toggle="popover"
                                            data-bs-trigger="focus" title="ESI"
                                            data-bs-content="Info about esi"><i
