--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -69,7 +69,7 @@
                         <br>
 
                         <label
-                                class="form-label" for="selectFiles">Upload your json file <input type="file"
+                                class="form-label" for="selectFiles">Click on the 'Choose File' button below to upload a GeoJSON file of your choice  <input type="file"
                                                                                                   class="form-control"
                                                                                                   id="selectFiles"/>
                         </label>
