--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -86,7 +86,8 @@
                                      aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <div>
-                                            <div class="container mt-3">
+                                            <div class="">
+{#                                                container mt-3#}
                                                 <ul class="m-0 nav nav-fill nav-justified nav-tabs"
                                                     id="gee_tab_list" role="tablist">
                                                     <li class="nav-item" role="presentation">
