--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -77,7 +77,7 @@
                                      aria-labelledby="headingFixed" data-bs-parent="#fixed_tab_container">
                                     <div class="accordion-body">
                                         <div id="fixed_tabs">
-                                            <div class="container mt-3">
+                                            <div class="">
                                                 <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="fixed_tab_list"
                                                     role="tablist">
                                                     <li class="nav-item" role="presentation">
@@ -219,8 +219,7 @@
                                                     <!-- Tab pane: Legends -->
                                                     <!-- This tab is used to display legend for the selected layer(s) -->
                                                     <div class="tab-pane" id="legends" role="tabpanel"
-                                                         aria-labelledby="legends-tab"><p class="mt-1 ml-2">Legend for
-                                                        the layer(s) selected</p></div>
+                                                         aria-labelledby="legends-tab"></div>
                                                 </div>
                                             </div>
                                         </div>
