--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -230,8 +230,7 @@
                                                     <div class="tab-pane pl-3" id="legends_gee" role="tabpanel"
                                                          aria-labelledby="legends_gee-tab">
 
-                                                        <p class="mt-1">Legend for
-                                                            the layer(s) selected</p>
+                                                        <p class="mt-1"></p>
                                                     </div>
                                                 </div>
                                             </div>
