--- a/WebApp/static/css/fixed_map.css
+++ b/WebApp/static/css/fixed_map.css
@@ -83,26 +83,47 @@
     display: contents;
 }
 
+.outer-tabs {
+    padding-right: 0;
+    padding-left: 10px;
+}
+
+.tab-pane#layers, .tab-pane#legends {
+    padding-left: 1.5rem!important;
+    padding-right: 1.5rem!important;
+}
+
+.map-thumb {
+float: left;
+position: relative;
+overflow: hidden;
+max-width: calc(50% - 12px);
+max-height: 300px;
+cursor: pointer;
+margin: 5px;
+}
+
 .img-thumbnail {
-    height: 100px;
-    border: none;
+width: 100%;
+height: auto;
+border: 0;
 }
 
 #legend_chirps {
-    background: black;
-    width: fit-content;
-    left: 10px;
+background: black;
+width: fit-content;
+left: 10px;
 }
 
 #legend_esi {
-    margin-left: 10px;
+margin-left: 10px;
 }
 
 #legends {
-    width: 90%;
-    margin: auto;
+width: 90%;
+margin: auto;
 
 }
 a:hover{
-    text-decoration: none;
+text-decoration: none;
 }
