--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -77,7 +77,7 @@
                                      aria-labelledby="headingFixed" data-bs-parent="#fixed_tab_container">
                                     <div class="accordion-body">
                                         <div id="fixed_tabs">
-                                            <div class="">
+                                            <div class="container mt-3 outer-tabs">
                                                 <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="fixed_tab_list"
                                                     role="tablist">
                                                     <li class="nav-item" role="presentation">
@@ -175,42 +175,48 @@
                                                          aria-labelledby="basemaps-tab">
                                                         <div class="h-100 text-center">
                                                             <div class=" pos d-block">
+                                                            <div class="map-thumb">
                                                                 <a id="osm" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/osm.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                            </div>
+                                                                <div class="map-thumb">
                                                                 <a id="topo" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/topo.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                                </div>
+                                                                <div class="map-thumb">
                                                                 <a id="gsatellite" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/gsatellite.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                                </div>
+                                                                <div class="map-thumb">
                                                                 <a id="satellite" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/satellite.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                                </div>
+                                                                <div class="map-thumb">
                                                                 <a id="terrain" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/terrain.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                                </div>
+                                                                <div class="map-thumb">
                                                                 <a id="delorme" href="#"
                                                                    onclick="add_basemap(this.id);"><img
                                                                         src="{% static 'images/basemaps/delorme.png' %}"
                                                                         alt="img1" class="img-thumbnail">
                                                                 </a>
-
+                                                                </div>
                                                             </div>
                                                         </div>
 
