spacing fixed tab

--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -112,7 +112,7 @@
                                                 <!-- This consists of CHIRPS and ESI Layers. More text about the layer can be added in the popover below
                                                      There are opacity controls for the layer and legends are displayed in the 'Legends' tab based on the checkbox selection.-->
                                                 <div class="border-grey bg-white tab-content">
-                                                    <div class="tab-pane active p-3 ml-3" id="layers"
+                                                    <div class="tab-pane active p-2" id="layers"
                                                          role="tabpanel"
                                                          aria-labelledby="layers-tab">
 
@@ -171,7 +171,7 @@
                                                     </div>
                                                     <!-- Tab pane: Basemaps -->
                                                     <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
-                                                    <div class="tab-pane h-100 pt-3" id="basemaps" role="tabpanel"
+                                                    <div class="tab-pane h-100 pt-2" id="basemaps" role="tabpanel"
                                                          aria-labelledby="basemaps-tab">
                                                         <div class="h-100 text-center">
                                                             <div class=" pos d-block">
