--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -224,7 +224,7 @@
                                                     </div>
                                                     <!-- Tab pane: Legends -->
                                                     <!-- This tab is used to display legend for the selected layer(s) -->
-                                                    <div class="tab-pane" id="legends" role="tabpanel"
+                                                    <div class="tab-pane p-1" id="legends" role="tabpanel"
                                                          aria-labelledby="legends-tab"></div>
                                                 </div>
                                             </div>
