--- a/WebApp/static/css/map_chart.css
+++ b/WebApp/static/css/map_chart.css
@@ -3,6 +3,7 @@ html {
     height: 100%;
     overflow: hidden
 }
+
 #map_chart {
     height: calc(100vh - 166px);
     /*width:-webkit-fill-available;*/
@@ -10,64 +11,68 @@ html {
     margin-left: 10px;
 
 }
-#chart-container_new{
+
+#chart-container_new {
     height: 100%;
 }
+
 #slideOut {
-  padding:0px;
-  position: fixed;
-  width: 40rem;
-   height:calc(100vh - 166px);
-  top: 130px;
-  right: -800px;
-  z-index:10;
-  /* Animation  */
-  transition-property: all;
-  transition-duration: .5s;
-  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    padding: 0px;
+    position: fixed;
+    width: 800px;
+    height: calc(100vh - 166px);
+    top: 130px;
+    right: -800px;
+    z-index: 10;
+    /* Animation  */
+    transition-property: all;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    max-width: unset;
 }
 
 
 /* Display slideOut */
 
 .showSlideOut {
-  right: 0px !important;
+    right: 0px !important;
 }
 
 .slideMap {
-  width: calc(100% - 40rem);
+    width: calc(100% - 40rem);
 }
 
 
 /* Tab */
 
 .slideOutTab {
-  margin-top: 50px;
-  position: absolute;
-  left: -40px;
-  height: 200px;
-  width: 40px;
-  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-  background: white;
-  border-radius: 15px 0px 0px 15px
+    margin-top: 50px;
+    position: absolute;
+    /*left: -40px;*/
+    right: 800px;
+    height: 200px;
+    width: 40px;
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    background: white;
+    border-radius: 15px 0px 0px 15px
 }
 
 .slideOutTab div {
-  text-align: center;
-  position: relative;
-  right: 70px;
-  top: 90px;
-  background: white;
-  width: 180px;
-  -webkit-transform: rotate(270deg);
-  -moz-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
-  writing-mode: lr-tb;
+    text-align: center;
+    position: relative;
+    right: 70px;
+    top: 90px;
+    background: white;
+    width: 180px;
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    writing-mode: lr-tb;
 }
 
 #mc_tab_container {
-   top: 260px;
+    top: 260px;
     position: absolute;
     z-index: 400;
     left: 0.5vh;
@@ -110,6 +115,7 @@ html {
     left: 10px;
 
 }
+
 #loading_mc {
     position: absolute;
     display: flex;
@@ -127,13 +133,34 @@ html {
 #loading-image-mc {
     z-index: 500;
 }
+
 .img-thumbnail {
     height: 100px;
     border: none;
 }
-a:hover{
+
+a:hover {
     text-decoration: none;
 }
-label{margin-left: 20px;}
-#datepicker{width:180px; margin: 0 20px 20px 20px;}
-#datepicker > span:hover{cursor: pointer;}
+
+label {
+    margin-left: 20px;
+}
+
+#datepicker {
+    width: 180px;
+    margin: 0 20px 20px 20px;
+}
+
+#datepicker > span:hover {
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 840px) {
+    #slideOut {
+        width: calc(100% - 40px);
+    }
+    .showSlideOut .slideOutTab{
+        right:calc(100vw - 40px);
+    }
+}
