cursor pointer, recenter map for slide

--- a/WebApp/static/css/map_chart.css
+++ b/WebApp/static/css/map_chart.css
@@ -17,7 +17,7 @@ html {
 }
 
 #slideOut {
-    padding: 0px;
+    padding: 0;
     position: fixed;
     width: 800px;
     height: calc(100vh - 166px);
@@ -55,7 +55,8 @@ html {
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
     background: white;
-    border-radius: 15px 0px 0px 15px
+    border-radius: 15px 0px 0px 15px;
+    cursor: pointer;
 }
 
 .slideOutTab div {
